--- a/less/public.less
+++ b/less/public.less
@@ -7,11 +7,11 @@
 
 @font-face {
 	font-family: 'machine';
-	src:  url('fonts/machine.eot?ks2gyw');
-	src:  url('fonts/machine.eot?ks2gyw#iefix') format('embedded-opentype'),
-		url('fonts/machine.ttf?ks2gyw') format('truetype'),
-		url('fonts/machine.woff?ks2gyw') format('woff'),
-		url('fonts/machine.svg?ks2gyw#machine') format('svg');
+	src:  url('fonts/machine.eot?u74o7j');
+	src:  url('fonts/machine.eot?u74o7j#iefix') format('embedded-opentype'),
+	url('fonts/machine.ttf?u74o7j') format('truetype'),
+	url('fonts/machine.woff?u74o7j') format('woff'),
+	url('fonts/machine.svg?u74o7j#machine') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -31,6 +31,9 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.icon-money:before {
+	content: "\e918";
+}
 .icon-confirm:before {
 	content: "\e917";
 }
@@ -107,6 +110,7 @@
 }
 
 
+
 body {
 	background-color: #eee;
 }
@@ -162,6 +166,9 @@ ul,textarea {
 .a-block {
 	display: block;
 }
+.placeholder-b::placeholder{
+	color: #000;
+}
 .confirm-style {
 	font-size: 0.7rem;
 	color: #1aad19;
@@ -169,6 +176,11 @@ ul,textarea {
 .detail-swiper {
 	text-align: center;
 	padding: 1rem;
+	.swiper-slide{
+		img{
+			margin: 0 auto;
+		}
+	}
 	.swiper-pagination-bullets {
 		bottom: 0;
 	}
@@ -518,7 +530,7 @@ ul,textarea {
 //同意条约
 .agree {
 	padding-left: 0.7rem;
-	.checkbox {
+	.check {
 		width: 0.6rem;
 		height: 0.6rem;
 		vertical-align: middle;
@@ -1209,8 +1221,7 @@ ul,textarea {
 			color: #fec10e;
 		}
 		.pay-balance-ci {
-			font-size: 2.0rem;
-			color: #ffda6f;
+			font-size: 2.25rem;
 		}
 	}
 	.pay-text {
